# pwzn

./: pyproject.toml
projekty/: project001.md
pwzn/lab1/: histogram.py  whatever.py
pwzn/lab10/: panda3.py
pwzn/lab11/: sieci.py
pwzn/lab2/: ising.py
pwzn/lab3/: web.py
pwzn/lab4/: web2.py
pwzn/lab5/: bokeh.py
pwzn/lab6/: dekorator.py
pwzn/lab7/: numba_ising.py
pwzn/lab8/: multi.py
pwzn/lab9/: async.py
tests/: test_pwzn.py
